--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
    <div id="buttondiv">
         <button onclick="save_notes()" id="save_button">Save</button>
    </div>
-
+   <div id="get_div">
+     <button id="get_div_button" onclick="get_notes()">Get Notes</button>
+   </div>
+   <pre id="output"></pre>
    <script src="script.js"></script>
 </body>
 </html>
